# claude-openai-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: linux.md  macos.md  windows.md
src/claude_openai_bridge/: cli.py  config.py  origin_probe.py  paths.py  proxy.py  service.py
tests/: test_origin_probe.py
